--- a/app/views/dashboard2/edit.html.erb
+++ b/app/views/dashboard2/edit.html.erb
@@ -4,5 +4,5 @@
 
 <div>
   <%= link_to "Show this product", @product %>
-  <%= link_to "Back to products", dashboard2_index_path %>
+  <%= link_to "Back to products", index_path %>
 </div>
