--- a/app/views/dashboard2/index.html.erb
+++ b/app/views/dashboard2/index.html.erb
@@ -739,12 +739,14 @@
   }</style>
 </head>
 
-<body class="bg-gray-50 dark:bg-gray-800 height">
+<body class="bg-gray-50 dark:bg-gray-800 height flex-col">
 
 
 <!--*************NAVBAR******************-->
-<%= render partial: "navbar" %>
-<div class="flex pt-16 overflow-hidden bg-gray-50 dark:bg-gray-900">
+<%= render partial: "navbar" ,class: "flex-1" %>
+
+
+<div class="flex pt-16 overflow-hidden bg-gray-50 dark:bg-gray-900 flex-20%">
 
   <aside id="sidebar" class="fixed top-0 left-0 z-20 flex flex-col flex-shrink-0 hidden w-64 h-full pt-16 font-normal duration-75 lg:flex transition-width" aria-label="Sidebar">
     <div class="relative flex flex-col flex-1 min-h-0 pt-0 bg-white border-r border-gray-200 dark:bg-gray-800 dark:border-gray-700">
@@ -779,6 +781,28 @@
                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16"/>
                 </svg>
                 <span class="ml-3" sidebar-toggle-item="">Add Product</span>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to new_user_registration_path, class: "flex items-center p-2 text-base text-gray-900 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700" do %>
+                <svg class="w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16"/>
+                </svg>
+                <span class="ml-3" sidebar-toggle-item="">Register</span>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to new_user_session_path, class: "flex items-center p-2 text-base text-gray-900 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700" do %>
+                <svg class="w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16"/>
+                </svg>
+                <span class="ml-3" sidebar-toggle-item="">Login</span>
+              <% end %>
+              <%= link_to destroy_user_session_path, class: "flex items-center p-2 text-base text-gray-900 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700" do %>
+                <svg class="w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16"/>
+                </svg>
+                <span class="ml-3" sidebar-toggle-item="">Login</span>
               <% end %>
             </li>
           </ul>
@@ -848,6 +872,6 @@
 
 
 <!--*************FOOTER******************-->
-<%= render partial: "footer" %>
+<%= render partial: "footer" ,class: "flex-20%"%>
 </body>
 </html>
