--- a/app/views/user/products/index.html.erb
+++ b/app/views/user/products/index.html.erb
@@ -6,9 +6,9 @@
   <% @products.each do |product| %>
     <%= render product %>
     <p>
-      <%= link_to "Show this product", product %>
+      <%= link_to "Show this product", user_product_path(product) %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New product", new_product_path %>
+<%#= link_to "New product", new_product_path %>
